fix overflow bug, add more genre, add not-found page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,12 @@
-@import url('https://fonts.cdnfonts.com/css/poppins');
+@import url("https://fonts.cdnfonts.com/css/poppins");
+@import url("https://fonts.googleapis.com/css?family=Inconsolata");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer components {
   input {
-    @apply outline-none rounded-md border border-gray-800 py-2 px-4;
+    @apply rounded-md border border-gray-800 px-4 py-2 outline-none;
   }
 }
 
@@ -33,6 +34,13 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+.anti-overflow * {
+  overflow: hidden !important;
+}
+.overflow * {
+  overflow: visible;
+}
+
 p,
 h1,
 h2,
@@ -43,12 +51,12 @@ a {
 }
 * {
   transition-property: all;
-  /* overflow: hidden; */
+  /* overflow-x: hidden; */
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  outline: red dashed 1px;
-  font-family: 'Poppins', sans-serif;
+  /* outline: red dashed 1px; */
+  font-family: "Poppins", sans-serif;
 }
 
 .scrolldown {
@@ -112,4 +120,120 @@ a {
   to {
     opacity: 0.5;
   }
+}
+
+/* ============================== */
+
+.body {
+  box-sizing: border-box;
+  height: 100%;
+  background-color: #000000;
+  background-image: radial-gradient(#11581e, #041607),
+    url("https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif");
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: "Inconsolata", Helvetica, sans-serif;
+  font-size: 1.5rem;
+  color: rgba(128, 255, 128, 0.8);
+  text-shadow:
+    0 0 1ex rgba(51, 255, 51, 1),
+    0 0 2px rgba(255, 255, 255, 0.8);
+}
+
+.noise {
+  pointer-events: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url("https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif");
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -1;
+  opacity: 0.02;
+}
+
+.overlay {
+  pointer-events: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: repeating-linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0) 0,
+    rgba(0, 0, 0, 0.3) 50%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  background-size: auto 4px;
+  z-index: 1;
+}
+
+.overlay::before {
+  content: "";
+  pointer-events: none;
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(
+    0deg,
+    transparent 0%,
+    rgba(32, 128, 32, 0.2) 2%,
+    rgba(32, 128, 32, 0.8) 3%,
+    rgba(32, 128, 32, 0.2) 3%,
+    transparent 100%
+  );
+  background-repeat: no-repeat;
+  animation: scan 7.5s linear 0s infinite;
+}
+
+@keyframes scan {
+  0% {
+    background-position: 0 -100vh;
+  }
+  35%,
+  100% {
+    background-position: 0 100vh;
+  }
+}
+
+.terminal {
+  box-sizing: inherit;
+  position: absolute;
+  height: 100%;
+  width: 1000px;
+  max-width: 100%;
+  padding: 4rem;
+  text-transform: uppercase;
+}
+
+.output {
+  color: rgba(128, 255, 128, 0.8);
+  text-shadow:
+    0 0 1px rgba(51, 255, 51, 0.4),
+    0 0 2px rgba(255, 255, 255, 0.8);
+}
+
+.output::before {
+  content: "> ";
+}
+
+.body a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.body a::before {
+  content: "[ ";
+}
+
+.body a::after {
+  content: " ]";
+}
+
+.errorcode {
+  color: white;
 }
